--- a/02-react-query-issues/package.json
+++ b/02-react-query-issues/package.json
@@ -20,10 +20,11 @@
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
-    "vite": "^3.2.0",
-    "@vitejs/plugin-react": "^2.2.0"
+    "@vitejs/plugin-react": "^2.2.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.2.0"
   }
 }
