--- a/02-react-query-issues/package.json
+++ b/02-react-query-issues/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query-devtools": "^4.22.0",
     "axios": "^1.2.2",
     "bootstrap": "5.2.2",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
